# LLM-CrewAI-Test-Project

./: README.md
tt_project/: README.md  pyproject.toml
tt_project/src/tt_project/: crew.py  main.py
