[project]
name = "tt_project"
version = "0.1.0"
description = "tt-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
tt_project = "tt_project.main:run"
run_crew = "tt_project.main:run"
train = "tt_project.main:train"
replay = "tt_project.main:replay"
test = "tt_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
